bug #25296  Truncate table converts NDB disk based tables to in-memory tables: implemented ha_ndbcluster::update_create_info